--- a/UNITED.html
+++ b/UNITED.html
@@ -15,10 +15,8 @@
     <link rel="stylesheet" href="css/footer.css">
     <link href="icons/fontawesome-free-6.1.2-web/css/all.css" rel="stylesheet">
     <link rel=”icon” href=”icons/favicon.ico” type=”image/x-icon” sizes="16x16">
+    <link rel="stylesheet" href="scss/reklama.scss">
 </head>
-
-<!-- Выпадающий список сделать через BOOTStrap!!!!!!!!!!!!!!!! не забудь ссылку на JS-->
-
 <body>
     <div class="right__main-menu">
         Site Feedback
